# health-safe-ocr

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-testpypi.yml  publish.yml  test.yml
examples/: basic_usage.py  cli_usage.md
src/health_safe_ocr/: __init__.py  cli.py  engines.py  extractor.py  models.py  nhs.py  pii.py  tesseract.py
tests/: test_extractor.py  test_nhs.py  test_pii.py
